add content block to the index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,9 @@
     <title>index</title>
 </head>
 <body>
-    
+    <h1>Git</h1>
+    <p>
+        Git — это зрелый, активно поддерживаемый проект с открытым исходным кодом, первоначально разработанный в 2005 году Линусом Торвальдсом, известным создателем ядра операционной системы Linux. Ошеломляющее количество программных проектов полагаются на Git для контроля версий, включая коммерческие проекты, а также проекты с открытым исходным кодом.
+    </p>
 </body>
 </html>
