--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,23 @@
     <title>gallery</title>
 </head>
 <body>
-    
+    <h1>Gallery</h1>
+    <table>
+        <tr>
+            <td colspan="2">
+                <img src="./img/ua.jpg" alt="Ukraine icons">
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td colspan="4">
+                <img src="./img/images.jpg" alt=".">
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
