added new folder img and new content to gallery

--- a/index.html
+++ b/index.html
@@ -7,9 +7,37 @@
     <title>index</title>
 </head>
 <body>
-    <h1>Git</h1>
-    <p>
-        Git — это зрелый, активно поддерживаемый проект с открытым исходным кодом, первоначально разработанный в 2005 году Линусом Торвальдсом, известным создателем ядра операционной системы Linux. Ошеломляющее количество программных проектов полагаются на Git для контроля версий, включая коммерческие проекты, а также проекты с открытым исходным кодом.
-    </p>
+    <h1 align="center">Git</h1>
+    <header>
+        <nav>
+            <a href="./gallery.html">Gallery</a>
+        </nav>
+    </header>
+    <section>
+        <p>
+            Git — это зрелый, активно поддерживаемый проект с открытым исходным кодом, первоначально разработанный в 2005 году Линусом Торвальдсом, известным создателем ядра операционной системы Linux. Ошеломляющее количество программных проектов полагаются на Git для контроля версий, включая коммерческие проекты, а также проекты с открытым исходным кодом.
+        </p>
+        <h2 align="right">Команды git:</h2>
+    </section>
+    <section>
+        <ul>
+            <li>
+                <h3>git status</h3>
+                <p>Показывает все изменения которые были сделаны</p>
+            </li>
+            <li>
+                <h3>git add . or git add -A</h3>
+                <p>добавляет все изменения в гит</p>
+            </li>
+            <li>
+                <h3>git commit -m 'ваш коментарий'</h3>
+                <p> делаем комментарий. так же этот коментарий являеться своеобразным point версии</p>
+            </li>
+            <li>
+                <h3>git push origin name/branch</h3>
+                <p>Добавления изменений на удаленный репозиторий</p>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
