--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <table>
         <tr>
             <td colspan="2">
-                <img src="./img/ua.jpg" alt="Ukraine icons">
+                <img src="./img/1_img.jpeg" alt="Ukraine icons">
             </td>
             <td></td>
             <td></td>
@@ -21,9 +21,21 @@
             <td></td>
             <td></td>
             <td colspan="4">
-                <img src="./img/images.jpg" alt=".">
+                <img src="./img/git-branches-merge.png" alt="git-branches-merge" width="600">
             </td>
         </tr>
+        <tr>
+            <td colspan="4">
+                <img src="./img/Introduction-To-GIT.png" alt="Introduction-To-GIT" width="600">
+            </td>
+            <td></td>
+            <td></td>
+        </tr>
     </table>
+    <footer>
+        <nav>
+            <a href="./index.html">Home</a>
+        </nav>
+    </footer>
 </body>
 </html>
