correction of mistakes

--- a/room/index.html
+++ b/room/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="./style/recet.css">
     <link rel="stylesheet" href="./style/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,6 +30,7 @@
             </ul>
         </nav>
         <section class="section-nav-large">
+            <div style="clear:both;"></div>
             <h1 class="logo">
                 <img src="./images/logo.svg" alt="logo 'room'">
             </h1>
@@ -65,6 +67,7 @@
             <img src="./images/room.svg" alt="room">
         </section>
         <section class="main-section-content">
+            <div style="clear:both;"></div>
             <p class="main-section-content-title dark-text-large">
                 Design that <br> inspires a better <br> way to work.
             </p>
@@ -74,25 +77,29 @@
                 sustainable, and flexible alternative to fixed <br>
                 construction and traditional office design.
             </p>
+            <div style="clear:both;"></div>
         </section>
         <section class="main-section-imgs">
             <ul class="main-section-imgs-ul">
+                <div style="clear:both;"></div>
                 <li class="li-item">
                     <img src="./images/room_1.svg" alt="room pink" id="room">
-                    <p class="dark-text-normal">Phone Booth</p>
+                    <p class="dark-text-normal rooms">Phone Booth</p>
                 </li>
                 <li class="li-item">
                     <img src="./images/room_2.svg" alt="room grey" id="room">
-                    <p class="dark-text-normal">Focus Room</p>
+                    <p class="dark-text-normal rooms">Focus Room</p>
                 </li>
+                <div style="clear:both;"></div>
                 <li class="li-item">
                     <img src="./images/room_3.svg" alt="room green" id="room">
-                    <p class="dark-text-normal">Meeting Room</p>
+                    <p class="dark-text-normal rooms">Meeting Room</p>
                 </li>
                 <li class="li-item">
                     <img src="./images/room_4.svg" alt="room dark green" id="room">
-                    <p class="dark-text-normal">Open Meeting Room</p>
+                    <p class="dark-text-normal rooms">Open Meeting Room</p>
                 </li>
+                <div style="clear:both;"></div>
             </ul>
         </section>
         <div class="main-section-partners">
@@ -174,9 +181,11 @@
                     <img src="./images/cost_effective.svg" alt="cost effective" class="li-item-img">
                     <p class="li-item-title">Cost-effective</p>
                     <p class="light-gray-text">
-                        At a fraction of the cost of traditional construction, 
-                        our pre-fab solutions create additional space for focused 
-                        work and collaboration without constant noise, debris and distraction.
+                        At a fraction of the cost of traditional <br> 
+                        construction, our pre-fab solutions create <br> 
+                        additional space for focused work and <br> 
+                        collaboration without constant noise, debris <br> 
+                        and distraction.
                     </p>
                 </li>
                 <li class="li-item">
@@ -185,29 +194,32 @@
                         Time Saving
                     </p>
                     <p class="light-gray-text">
-                        Thoughtful design ensures simple installation in a few hours or less. 
-                        And, because our products are safety ensured, 
-                        you'll never have to spend time or money chasing after permits, 
-                        contractors, and more.
+                        Thoughtful design ensures simple <br> 
+                        installation in a few hours or less. And, <br> 
+                        because our products are safety ensured, <br> 
+                        you'll never have to spend time or money <br> 
+                        chasing after permits, contractors, and <br> 
+                        more.
                     </p>
                 </li>
                 <li class="li-item">
                     <img src="./images/flexible.svg" alt="flexible" class="li-item-img">
                     <p class="li-item-title">Flexible</p>
                     <p class="light-gray-text">
-                        Unlike traditional construction, our purpose-built products
-                        were designed to adapt with your workspace and can easily 
-                        be positioned in various places throughout your office, 
-                        or to an entirely new location.
+                        Unlike traditional construction, our <br> 
+                        purpose-built products were designed to <br> 
+                        adapt with your workspace and can easily be <br> 
+                        positioned in various places throughout your <br> 
+                        office, or to an entirely new location.
                     </p>
                 </li>
             </ul>
         </section>
         <section class="main-section-reviews">
-            <div style="position: absolute;">
+            <div style="position: relative;">
                 <img src="./images/section-review-bg.svg" alt="review" class="section-review-img">
             </div>
-            <div>
+            <div class="position-ul">
                 <ul class="main-section-reviews-ul">
                     <li class="li-item">
                         <img src="./images/star.svg" alt="stars">
@@ -244,7 +256,7 @@
                     personal, and rethinking every step of the <br> 
                     user experience along the way.
                 </p>
-                <p class="dark-text-large">
+                <p class="dark-text-large subtitle">
                     We make work, work for you.
                 </p>
         </section>
@@ -256,7 +268,7 @@
                     <p class="dark-text-normal dark-title">
                         We sell direct.
                     </p>
-                    <p class="light-gray-text gray-subtitle">
+                    <p class="light-gray-text gray-subtitle subtitle">
                         We make extra room in the budget without <br> 
                         compromising quality by selling direct. No <br> 
                         middle man, and no additional construction <br> 
@@ -271,7 +283,7 @@
                     <p class="dark-text-normal dark-title">
                         We build with purpose.
                     </p>
-                    <p class="light-gray-text gray-subtitle">
+                    <p class="light-gray-text gray-subtitle subtitle">
                         We’re not just building another room with <br> 
                         four walls, we’re building a more <br> 
                         productive workspace. We design with <br> 
@@ -287,7 +299,7 @@
                     <p class="dark-text-normal dark-title">
                         We design sustainably.
                     </p>
-                    <p class="light-gray-text gray-subtitle">
+                    <p class="light-gray-text gray-subtitle subtitle">
                         From design to delivery, we strive to lessen <br> 
                         our impact on the environment. Our <br> 
                         products are engineered with recycled <br> 
@@ -329,7 +341,7 @@
         </div>
         <div>
             <ul class="footer-ul">
-                <p class="title-ul">About</p>
+                <p class="title-ul title-footer">About</p>
                 <li class="li-item">Compare</li>
                 <li class="li-item">Reviews</li>
                 <li class="li-item">Risk_Free Trial</li>
@@ -338,8 +350,8 @@
                 <li class="li-item">Prodcast</li>
                 <li class="li-item">Blog</li>
             </ul>
+            <p class="title-ul title-footer">Showrooms</p>
             <ul class="footer-ul">
-                <p class="title-ul">Showrooms</p>
                 <li class="li-item">New York</li>
                 <li class="li-item">london</li>
                 <li class="li-item">San Francisco</li>
@@ -353,7 +365,7 @@
             </ul>
         </div>
         <div>
-            <p class="title-ul">Support</p>
+            <p class="title-ul title-footer">Support</p>
                 <ul class="footer-ul">
                     <li class="li-item">FAQ</li>
                     <li class="li-item">Booth Assembly</li>
@@ -364,13 +376,13 @@
                     <li class="li-item">Privacy Policy</li>
                     <li class="li-item">Copyright</li>
                 </ul>
-                <p class="">Office</p>
+                <p class="title-footer">Office</p>
                 <p class="">
                     599 Brodway, FL 9 <br> New York, NY 10012
                 </p>
         </div>
         <div>
-            <p class="title-ul">Follow us</p>
+            <p class="title-ul title-footer">Follow us</p>
                 <ul class="footer-ul-img">
                     <li class="li-item">
                         <a href="#"><img src="./images/facebook.svg" alt="facebook"></a>
@@ -387,8 +399,8 @@
                 </ul>
         </div>
         <div>
-            <p class="">Join our mailing list</p>
-            <p class="">Be the first to hear everything about ROOM.</p>
+            <p class="title-footer">Join our mailing list</p>
+            <p class="title-footer">Be the first to hear everything about ROOM.</p>
             <form action="./send.php" method="POST">
                 <input type="text" class="inp-footer-text">
                 <div style="clear:both;"></div>
