--- a/room/index.html
+++ b/room/index.html
@@ -14,21 +14,28 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap" rel="stylesheet">
     </head>
 <body>
-    <nav class="nav-top">
-        <ul class="nav-top-ul">
-            <li>
-                <a href="#">HOME</a>
-            </li>
-            <li>
-                <a href="#">PRODUCTS +</a>
-                <ul>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
+    <div class='nav'>
+        <ul>
+           <li><a href='index.html'>Home</a></li>
+           <li class='sub-nav'><a href='#'>Products</a>
+              <ul>
+                 <li class='sub-nav'><a href='#'>Product 1</a>
+                    <ul>
+                       <li><a href='#'>Sub Item</a></li>
+                       <li><a href='#'>Sub Item</a></li>
+                    </ul>
+                 </li>
+                 <li class='sub-nav'><a href='#'>Product 2</a>
+                    <ul>
+                       <li><a href='#'>Sub Item</a></li>
+                       <li><a href='#'>Sub Item</a></li>
+                    </ul>
+                 </li>
+              </ul>
+           </li>
+           <li><a href='#'>About</a></li>
+           <li><a href='#'>Contact</a></li>
         </ul>
-    </nav>
+    </div>
 </body>
 </html>
